# wasm-repro-genrule

./: BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  hello-bin.js
cargo/: BUILD.bazel
rust/cargo/: crates.bzl
rust/cargo/remote/: BUILD.bumpalo-3.9.1.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.log-0.4.16.bazel  BUILD.proc-macro2-1.0.36.bazel  BUILD.quote-1.0.16.bazel  BUILD.syn-1.0.89.bazel  BUILD.unicode-xid-0.2.2.bazel  BUILD.wasm-bindgen-0.2.78.bazel  BUILD.wasm-bindgen-backend-0.2.78.bazel  BUILD.wasm-bindgen-macro-0.2.78.bazel  BUILD.wasm-bindgen-macro-support-0.2.78.bazel  BUILD.wasm-bindgen-shared-0.2.78.bazel
src/: lib.rs
