# Copyright 2020 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# buildifier: disable=module-docstring
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@rules_rust//wasm_bindgen:wasm_bindgen.bzl", "rust_wasm_bindgen")

package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "hello-bin",
    data = [":hello_world_nodejs_wasm_bindgen"],
    entry_point = "hello-bin.js",
)

rust_shared_library(
    name = "hello_world_lib_wasm",
    srcs = ["src/lib.rs"],
    deps = [
        "@rules_rust//wasm_bindgen/raze:wasm_bindgen",
    ],
)

rust_wasm_bindgen(
    name = "hello_world_nodejs_wasm_bindgen",
    target = "nodejs",
    wasm_file = ":hello_world_lib_wasm",
)

genrule(
    name = "hello-gen",
    outs = ["test.txt"],
    cmd =
        """
#!/bin/bash
set -euo pipefail
binary="$(location //:hello-bin)"
exec "$$binary" > $(OUTS) 
""",
    tools = ["//:hello-bin"],
)
