[package]
name = "prosecco_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.78"

[package.metadata.raze]
workspace_path = "//rust/cargo"
genmode = "Remote"
gen_workspace_prefix = "remote_build_dependencies"
package_aliases_dir = "cargo"
default_gen_buildrs = true
experimental_api = true
